[package]
name = "cache_proj"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roaring="0.8.1"
rayon = "1.5.1"
murmur3 = "0.5.1"
tonic = "0.6"
tonic-health = "0.5"
tokio = { version = "1.16.1", features = ["macros", "rt-multi-thread", "time"] }
tokio-stream = "0.1.8"
#hdf5 = {version = "0.8.0"}
sys-info = "0.9"
tokio-util = "0.6.9"
rand = "0.8.4"
bitvec = "0.20"
byte-slice-cast = "1.1.0"
config = "0.11.0"
bytes = "1.1.0"
rusoto_core = "0.47.0"
rusoto_s3 = "0.47.0"
quickcheck = "1.0.3"
serial_test = "0.5.1"
rstest = "0.11.0"
criterion =  { version = "0.3", features = ["html_reports"]}
ndarray = "0.15.0"
test-context = "0.1.3"
float-cmp = "0.9.0"
mock_instant = "0.2.1"
ordered-float = "2.8.0"
regex = "1.5.4"
sysinfo = "0.23.0"
plotters = "0.3.1"
walkdir = "2.3.2"
byte-unit = "4.0.13"